changes in sidemenu

--- a/style.css
+++ b/style.css
@@ -243,6 +243,7 @@ span {
 }
 
 .preview {
+  margin-top: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -265,16 +266,42 @@ span {
 
 @media only screen and (max-width: 1000px) {
   #wrapper {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    font-size: 16px;
+    -ms-grid-columns: 72px 1fr;
+        grid-template-columns: 72px 1fr;
   }
-  .side-menu {
-    display: none;
+  #wrapper .side-menu {
+    font-size: 17px;
   }
-  .side-menu.visible {
-    display: block;
-    width: 240px;
-    min-height: 100vh;
+  #wrapper .side-menu a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  #wrapper .side-menu span {
+    font-size: 11px;
+    margin: 0;
+  }
+  #wrapper.visible-side-menu {
+    -ms-grid-columns: 240px 1fr;
+        grid-template-columns: 240px 1fr;
+  }
+  #wrapper.visible-side-menu .side-menu {
+    font-size: 20px;
+  }
+  #wrapper.visible-side-menu .side-menu a {
+    display: inline-block;
+  }
+  #wrapper.visible-side-menu .side-menu span {
+    font-size: 1em;
+    margin-left: 26px;
   }
 }
 
